Use Paths.get instead of Path.of for JDK 1.8 compatibility